--- a/view/create-room.html
+++ b/view/create-room.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Planning Poker</title>
+    <title>Pivot Poker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -52,9 +52,9 @@
   submitName.addEventListener('click', () => {
     const removeCharacters = name.value.replace(/[^a-zA-Z0-9-_]/g, '-');
     const formattedName = removeCharacters.replace(/-+/g, '-');
-    axios.get('/room/' + formattedName).then((response) => {
+    axios.get('/' + formattedName).then((response) => {
       if (response.data) {
-        window.location.href = '/room/' + formattedName;
+        window.location.href = '/' + formattedName;
       } else {
         alert('La sala no existe');
       }
