--- a/view/room.html
+++ b/view/room.html
@@ -29,9 +29,24 @@
             </div>
             <div class="grid-area grid-table-center">
                 <div class="grid-table-center-content">
-                    <div class="text-center poker-title">♠️♥️♣️♦️</div>
-                    <button class="btn btn-primary" id="revealVotes">Revelar cartas</button>
-                    <button class="btn btn-primary" id="resetVotes">Nueva ronda</button>
+                    <div class="text-center poker-title"></div>
+                    <button class="poker-button" id="revealVotes">Revelar cartas</button>
+                    <button class="poker-button" id="resetVotes">Nueva ronda</button>
+                    <div id="copyUrlDiv">
+                        <span id="copyUrlInfo">Comparte este enlace</span>
+                        <div class="copyUrl">
+                            <input type="text" class="form-control" id="copyUrlInput" readonly/>
+                            <button class="poker-button" id="copyUrlButton">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-copy"
+                                     viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                          d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+                                </svg>
+
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="grid-area grid-table-right">
@@ -112,327 +127,6 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-  const socket = io();
-  const name = document.getElementById('name');
-  const submitName = document.getElementById('submitName');
-  const room = document.getElementById('room');
-  const usersTopList = document.getElementById('usersTop');
-  const usersLeftList = document.getElementById('usersLeft');
-  const usersRightList = document.getElementById('usersRight');
-  const usersBottomList = document.getElementById('usersBottom');
-  const votesCount = document.getElementById('votesCount');
-  const votesAverage = document.getElementById('votesAverage');
-  const revealVotes = document.getElementById('revealVotes');
-  const resetVotes = document.getElementById('resetVotes');
-  const votesContainer = document.getElementById('votesContainer');
-  const divStats = document.getElementById('stats');
-  const modal = new bootstrap.Modal(document.getElementById('nameModal'), {
-    backdrop: 'static',
-    keyboard: false,
-  });
-  const buttons = document.getElementsByClassName('fibonacci-button');
-
-  let locationPath = window.location.pathname.split('/');
-  const roomName = window.location.pathname.split('/');
-  let usersArray = [];
-  let cardReveal = false;
-  let winner = true;
-
-  socket.emit('joinRoom', roomName[roomName.length - 1]);
-  modal.show();
-  divStats.style.display = 'none';
-  votesContainer.style.display = 'flex';
-
-  const truncate = (str, n) => {
-    if (str.length <= n) {
-      return str;
-    } else {
-      let subString = str.substr(0, n - 1); // the original check
-      return subString.substr(0, subString.lastIndexOf(' ')) + '...';
-    }
-  };
-
-  const updateUserList = () => {
-    usersTop = usersArray.filter(user => user.seat === 'top').sort();
-    usersLeft = usersArray.filter(user => user.seat === 'left').sort();
-    usersRight = usersArray.filter(user => user.seat === 'right').sort();
-    usersBottom = usersArray.filter(user => user.seat === 'bottom').sort();
-
-    usersTopList.innerHTML = '';
-    usersLeftList.innerHTML = '';
-    usersRightList.innerHTML = '';
-    usersBottomList.innerHTML = '';
-    usersTop.forEach(user => {
-      const li = document.createElement('li');
-      const userContent = `<div class="user-table">
-            <div id="userVoteCardTop" class="user-vote">${user.vote}</div>
-            <div class="user-name" title="${user.user}">${truncate(user.user, 20)} ${user.vote !== ''
-          ? '<span class="vote-check">✓</span>'
-          : ''}</div>
-        </div>`;
-      li.classList.add('list-group-item');
-      li.innerHTML = userContent;
-
-      const userVoteCard = li.querySelector('#userVoteCardTop');
-      console.log('cardReveal', cardReveal);
-      if (user.vote !== '' && !cardReveal) {
-        userVoteCard.classList.add('user-vote-hidden');
-      }
-      usersTopList.appendChild(li);
-    });
-    usersLeft.forEach(user => {
-      const li = document.createElement('li');
-      const userContent = `<div class="user-table">
-            <div id="userVoteCardLeft" class="user-vote">${user.vote}</div>
-            <div class="user-name" title="${user.user}">${truncate(user.user, 20)} ${user.vote !== ''
-          ? '<span class="vote-check">✓</span>'
-          : ''}</div>
-        </div>`;
-      li.classList.add('list-group-item');
-      li.innerHTML = userContent;
-
-      const userVoteCard = li.querySelector('#userVoteCardLeft');
-      console.log('cardReveal', cardReveal);
-      if (user.vote !== '' && !cardReveal) {
-        userVoteCard.classList.add('user-vote-hidden');
-      }
-      usersLeftList.appendChild(li);
-    });
-    usersRight.forEach(user => {
-      const li = document.createElement('li');
-      const userContent = `<div class="user-table">
-            <div id="userVoteCardRight" class="user-vote">${user.vote}</div>
-            <div class="user-name" title="${user.user}">${truncate(user.user, 20)} ${user.vote !== ''
-          ? '<span class="vote-check">✓</span>'
-          : ''}</div>
-        </div>`;
-      li.classList.add('list-group-item');
-      li.innerHTML = userContent;
-
-      const userVoteCard = li.querySelector('#userVoteCardRight');
-      console.log('cardReveal', cardReveal);
-      if (user.vote !== '' && !cardReveal) {
-        userVoteCard.classList.add('user-vote-hidden');
-      }
-      usersRightList.appendChild(li);
-    });
-    usersBottom.forEach(user => {
-      const li = document.createElement('li');
-      const userContent = `<div class="user-table">
-            <div id="userVoteCardBottom" class="user-vote">${user.vote}</div>
-            <div class="user-name" title="${user.user}">${truncate(user.user, 20)} ${user.vote !== ''
-          ? '<span class="vote-check">✓</span>'
-          : ''}</div>
-        </div>`;
-      li.classList.add('list-group-item');
-      li.innerHTML = userContent;
-
-      const userVoteCard = li.querySelector('#userVoteCardBottom');
-      console.log('cardReveal', cardReveal);
-      if (user.vote !== '' && !cardReveal) {
-        userVoteCard.classList.add('user-vote-hidden');
-      }
-      usersBottomList.appendChild(li);
-    });
-  };
-
-  const formatLocationPath = (string) => {
-    const replace = string.replace(/-/g, ' ');
-    return replace.charAt(0).toUpperCase() + replace.slice(1);
-  };
-
-  room.textContent = formatLocationPath(locationPath[locationPath.length - 1]);
-
-  const revealUserVotes = () => {
-    const userVotes = document.getElementsByClassName('user-vote');
-    for (let i = 0; i < userVotes.length; i++) {
-      userVotes[i].classList.remove('user-vote-hide');
-      userVotes[i].classList.remove('user-vote-hidden');
-      userVotes[i].classList.add('user-vote-reveal');
-    }
-
-    renderVotesStats();
-  };
-
-  function getNearestFibonacci(number) {
-    let a = 0;
-    let b = 1;
-    let temp;
-
-    while (b < number) {
-      temp = a;
-      a = b;
-      b = temp + b;
-    }
-    if (Math.abs(number - a) < Math.abs(b - number)) {
-      return a;
-    } else {
-      return b;
-    }
-  }
-
-  const getStats = () => {
-    const votes = {};
-    let votesCount = 0;
-    let votesTotal = 0;
-    let averageVotes = 0;
-    usersArray.forEach(user => {
-      if (user.vote !== '' && user.vote !== '🤨') {
-        votesCount++;
-        votesTotal += parseInt(user.vote);
-        if (votes[user.vote]) {
-          votes[user.vote]++;
-        } else {
-          votes[user.vote] = 1;
-        }
-      }
-    });
-
-    averageVotes = votesTotal / votesCount;
-    averageVotes = getNearestFibonacci(averageVotes);
-
-    return {votesCount, averageVotes, votes};
-  };
-
-  const renderVoteWithCard = (vote, count) => {
-    const voteCount = document.createElement('div');
-    voteCount.classList.add('vote-count');
-    const cardContent = document.createElement('div');
-    cardContent.classList.add('user-vote');
-    cardContent.textContent = vote;
-    voteCount.appendChild(cardContent);
-    const countContent = document.createElement('div');
-    countContent.classList.add('vote-count');
-    countContent.textContent = `${count} Votos`;
-    voteCount.appendChild(countContent);
-    if (winner) {
-      cardContent.classList.add('winner');
-      winner = false;
-    }
-    votesCount.appendChild(voteCount);
-  };
-
-  const renderVotesStats = () => {
-    const {votesCount, averageVotes, votes} = getStats();
-    //order votes by value number and return an array
-    const orderedVotes = Object.entries(votes).sort((a, b) => a[1] - b[1]).reverse();
-
-    const votesCountContent = `<div class="votes-count-content">
-            <h5>Votos</h5>
-            <div class="votes-count-content">
-                ${orderedVotes.map(
-        ([vote, count]) => renderVoteWithCard(vote, count))}
-            </div>
-        </div>`;
-    votesCount.innerHTML = votesCountContent;
-
-    const votesAverageContent = `<div class="votes-average-content">
-            <div class="user-vote average">${averageVotes}</div>
-            <div class="vote-count">Media</div>
-        </div>`;
-
-    votesAverage.innerHTML = votesAverageContent;
-  };
-
-  const checkRevealButton = () => {
-    const canReveal = usersArray.every(user => user.vote !== '') && !cardReveal;
-    if (canReveal) {
-      revealVotes.style.display = 'block';
-    } else {
-      revealVotes.style.display = 'none';
-    }
-  };
-
-  const checkResetButton = () => {
-    if (cardReveal) {
-      resetVotes.style.display = 'block';
-    } else {
-      resetVotes.style.display = 'none';
-    }
-  };
-
-  const checkDivStats = () => {
-    if (cardReveal) {
-      divStats.style.display = 'flex';
-      votesContainer.style.display = 'none';
-    } else {
-      divStats.style.display = 'none';
-      votesContainer.style.display = 'flex';
-    }
-  };
-
-  revealVotes.addEventListener('click', () => {
-    socket.emit('reveal', roomName[roomName.length - 1]);
-  });
-
-  resetVotes.addEventListener('click', () => {
-    socket.emit('reset', roomName[roomName.length - 1]);
-  });
-
-  socket.on('reveal', (reveal) => {
-    cardReveal = reveal;
-    if (cardReveal) {
-      revealUserVotes();
-      revealVotes.style.display = 'none';
-    }
-    checkResetButton();
-    checkDivStats();
-  });
-
-  socket.on('users', ({users, reveal}) => {
-    usersArray = [...users];
-    cardReveal = reveal;
-    console.log('users', usersArray);
-    updateUserList();
-    checkRevealButton();
-    checkResetButton();
-    checkDivStats();
-  });
-
-  socket.on('vote', ({vote, user}) => {
-    console.log('vote', vote, user);
-  });
-
-  submitName.addEventListener('click', () => {
-    if (!name.value || name.value === '' || name.value === ' ') {
-      return;
-    }
-    socket.emit('newUser', {room: roomName[roomName.length - 1], user: name.value});
-    modal.hide();
-  });
-
-  socket.on('reset', ({users, reveal}) => {
-    usersArray = [...users];
-    updateUserList();
-    cardReveal = reveal;
-    revealVotes.textContent = 'Revelar cartas';
-    for (let i = 0; i < buttons.length; i++) {
-      buttons[i].classList.remove('fibonacci-button-selected');
-    }
-    revealVotes.style.display = 'block';
-    resetVotes.style.display = 'none';
-    divStats.style.display = 'none';
-    winner = true;
-    votesCount.innerHTML = '';
-    checkRevealButton();
-    checkResetButton();
-    checkDivStats();
-  });
-
-  for (let i = 0; i < buttons.length; i++) {
-    buttons[i].addEventListener('click', () => {
-      buttons[i].classList.add('fibonacci-button-selected');
-      for (let j = 0; j < buttons.length; j++) {
-        if (buttons[j] !== buttons[i]) {
-          buttons[j].classList.remove('fibonacci-button-selected');
-        }
-      }
-      socket.emit('vote', {room: roomName[roomName.length - 1], vote: buttons[i].textContent});
-    });
-  }
-
-
-</script>
+<script type="module" src="/js/poker.js"></script>
 </body>
 </html>
