--- a/view/create-room.html
+++ b/view/create-room.html
@@ -2,27 +2,20 @@
 <html lang="es">
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>Pivot Poker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <h1 class="text-center">Planning Poker</h1>
-        </div>
-    </div>
-</div>
-
 <!-- Modal -->
 <div class="modal fade" id="nameModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
      aria-labelledby="nameModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="nameModalLabel">Introduce el nombre de la sala</h1>
+                <h1 class="modal-title fs-5" id="nameModalLabel">Introduce un nombre de la sala para crearla</h1>
             </div>
             <div class="modal-body">
                 <input type="text" class="form-control" id="name" placeholder="Nombre">
